--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_GOOGLE_SHEET_CSV_URL=https://docs.google.com/spreadsheets/d/e/2PACX-1vQUPK8a-CkQ8kYhukFkl5O73LRp68Nf5JGSlmOfOT7vTt1LPaikJsy_chVnPLUI0Z4MZgIcynd8Kjkt/pub?gid=0&single=true&output=csv
+VITE_GOOGLE_SHEET_EVENTS_CSV_URL=
