--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "react-phone-number-input": "^3.3.12",
+    "libphonenumber-js": "^1.10.64"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
