feat: Replace gold accent with magenta + Complete SEO optimization + Security hardening
## Accent Color Change
- Replace gold (#F5A623) with magenta (hsl 330 80% 55%) across entire codebase
- Update CSS variables, Tailwind config, and button variants
- Update all 17 files using gold to use magenta instead
- More cohesive with the violet DA palette

## SEO Optimization
- Add comprehensive meta tags (robots, keywords, canonical)
- Add Open Graph tags with full metadata
- Add Twitter Card meta tags
- Add Schema.org JSON-LD for SportsTeam and WebSite
- Create sitemap.xml with all public pages
- Create robots.txt with sitemap reference
- Create manifest.json for PWA support
- Add preconnect hints for external resources

## Security Hardening
- Add Content-Security-Policy header
- Add X-DNS-Prefetch-Control header
- Add interest-cohort to Permissions-Policy (FLoC blocking)
- Enable HSTS preload
- Add cache headers for static assets

## Code Quality
- No linter errors
- Build passes successfully
- All connections verified

--- a/vercel.json
+++ b/vercel.json
@@ -11,8 +11,28 @@
         { "key": "X-Frame-Options", "value": "DENY" },
         { "key": "X-XSS-Protection", "value": "1; mode=block" },
         { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
-        { "key": "Permissions-Policy", "value": "camera=(), microphone=(), geolocation=()" },
-        { "key": "Strict-Transport-Security", "value": "max-age=31536000; includeSubDomains" }
+        { "key": "Permissions-Policy", "value": "camera=(), microphone=(), geolocation=(), interest-cohort=()" },
+        { "key": "Strict-Transport-Security", "value": "max-age=31536000; includeSubDomains; preload" },
+        { "key": "X-DNS-Prefetch-Control", "value": "on" },
+        { "key": "Content-Security-Policy", "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://api.fontshare.com https://fonts.googleapis.com https://va.vercel-scripts.com; style-src 'self' 'unsafe-inline' https://api.fontshare.com https://fonts.googleapis.com; font-src 'self' https://api.fontshare.com https://fonts.gstatic.com data:; img-src 'self' data: https: blob:; connect-src 'self' https://docs.google.com https://api.stripe.com https://*.vercel-insights.com https://*.vercel-analytics.com; frame-src 'self' https://js.stripe.com https://hooks.stripe.com; object-src 'none'; base-uri 'self'; form-action 'self' https://checkout.stripe.com;" }
+      ]
+    },
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    },
+    {
+      "source": "/(.*).js",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    },
+    {
+      "source": "/(.*).css",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
     }
   ]
