--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^3.6.0",
     "libphonenumber-js": "^1.10.64",
     "lucide-react": "^0.462.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
