--- a/.env.example
+++ b/.env.example
@@ -1,49 +1,54 @@
+# =============================================================================
 # FC Ardentis - Environment Variables
-# Copy this file to .env.local and fill in the values
-
 # =============================================================================
-# FRONTEND (VITE_* prefix - exposed to browser)
+# Copy this file to .env.local and fill in your values
+# Never commit .env.local to version control!
 # =============================================================================
 
-# Google Sheets CSV URLs (public, read-only)
-# Get these by publishing your Google Sheets as CSV
-# File → Share → Publish to web → CSV format
+# -----------------------------------------------------------------------------
+# FRONTEND - Google Sheets CSV URLs (VITE_* = exposed to client)
+# -----------------------------------------------------------------------------
+# Products catalog for the shop
 VITE_SHEET_PRODUCTS_CSV_URL=https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/gviz/tq?tqx=out:csv&sheet=Products
+
+# Team roster
 VITE_GOOGLE_SHEET_TEAM_CSV_URL=https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/gviz/tq?tqx=out:csv&sheet=Team
+
+# Calendar events (matches & training)
 VITE_GOOGLE_SHEET_EVENTS_CSV_URL=https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/gviz/tq?tqx=out:csv&sheet=Events
+
+# League standings (optional)
 VITE_SHEET_STANDINGS_CSV_URL=https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/gviz/tq?tqx=out:csv&sheet=Standings
 
-# Optional: Google Photos album for gallery
-VITE_GOOGLE_PHOTOS_ALBUM_SHARE_URL=
+# Webhook URL for join form submissions
+VITE_JOIN_WEBHOOK_URL=https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec
 
-# Optional: Mapbox for interactive maps (not currently used)
-VITE_MAPBOX_ACCESS_TOKEN=
+# Photo album URL (optional, placeholder)
+# VITE_GOOGLE_PHOTOS_ALBUM_SHARE_URL=
 
-# =============================================================================
-# BACKEND (Server-side only - NOT exposed to browser)
-# =============================================================================
+# -----------------------------------------------------------------------------
+# BACKEND - Stripe (server-side only, NOT exposed to client)
+# -----------------------------------------------------------------------------
+# Stripe secret key (sk_test_... for dev, sk_live_... for production)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 
-# Stripe Configuration
-# Get these from https://dashboard.stripe.com/apikeys
-# Use sk_test_* for development, sk_live_* for production
-STRIPE_SECRET_KEY=sk_test_...
+# Stripe webhook signing secret (whsec_...)
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
-# Stripe Webhook Secret
-# Get this when setting up webhooks in Stripe Dashboard
-# Or from stripe listen CLI output
-STRIPE_WEBHOOK_SECRET=whsec_...
-
-# Google Sheets - Server-side access
-# Same URL as VITE_SHEET_PRODUCTS_CSV_URL (for server-side validation)
+# -----------------------------------------------------------------------------
+# BACKEND - Google Sheets API (server-side only)
+# -----------------------------------------------------------------------------
+# Products catalog URL (same content as VITE_SHEET_PRODUCTS_CSV_URL)
 PRODUCTS_CSV_URL=https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/gviz/tq?tqx=out:csv&sheet=Products
 
-# Google Apps Script Web App URL
-# Deploy your Apps Script as Web App and paste the URL here
-# See docs/data-sources.md for setup instructions
+# Google Apps Script Web App URL for order management
 SHEET_ORDERS_WEBAPP_URL=https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec
 
-# Optional: Apps Script authentication token
-SHEET_APP_TOKEN=
+# Optional: Auth token for Apps Script (if implemented)
+# SHEET_APP_TOKEN=your_secret_token
 
-# Optional: Override public base URL (auto-detected on Vercel)
-PUBLIC_BASE_URL=
+# -----------------------------------------------------------------------------
+# OPTIONAL - Deployment
+# -----------------------------------------------------------------------------
+# Public base URL (auto-detected on Vercel, set for local testing)
+# PUBLIC_BASE_URL=http://localhost:5173
