--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
   "name": "fc-ardentis",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "description": "Official website for FC Ardentis football club - Paris region",
+  "author": "Clément Sporrer",
+  "license": "UNLICENSED",
+  "homepage": "https://fc-ardentis.vercel.app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clement-sporrer/fc-ardentis.git"
+  },
+  "bugs": {
+    "url": "https://github.com/clement-sporrer/fc-ardentis/issues"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "lint:fix": "eslint . --fix",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -53,6 +65,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "postcss": "^8.5.6",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
@@ -61,5 +74,8 @@
   "overrides": {
     "undici": "^5.28.6",
     "path-to-regexp": "^6.3.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
