feat(seo): ultra-complete SEO overhaul for maximum visibility
- Add SSR/prerendering for all pages via Vite build
- Create HeadManager for dynamic meta/title/json-ld injection
- Add comprehensive structured data (SportsTeam, FAQPage, BreadcrumbList, Product)
- Optimize all titles/descriptions with keywords:
  - Club foot amateur Paris/92/Hauts-de-Seine/Île-de-France
  - Football loisir adulte +18 ans
  - CFL Paris compétition
  - Colombes (92) localisation
- Add new /cfl landing page for competition-specific SEO
- Fix 'Nous contacter' button visibility on CFL page (glass → outline)
- Add hreflang/alternate links for fr-FR
- Configure Vercel 308 redirects for canonical domain
- Generate dynamic sitemap with product pages
- Update all content with local SEO keywords (92, Hauts-de-Seine, amateur, adulte)
- Add FAQ sections on Rejoindre/Contacts pages

Keywords targeted: club foot Colombes, football amateur Paris, club foot 92,
football loisir adulte, club foot Hauts-de-Seine, CFL Paris, rejoindre club foot

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Official website for FC Ardentis football club - Paris region",
   "author": "Clément Sporrer",
   "license": "UNLICENSED",
-  "homepage": "https://fc-ardentis.vercel.app",
+  "homepage": "https://fcardentis.fr",
   "repository": {
     "type": "git",
     "url": "https://github.com/clement-sporrer/fc-ardentis.git"
@@ -16,8 +16,12 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run build:seo",
     "build:dev": "vite build --mode development",
+    "build:ssr": "vite build --ssr src/entry-server.tsx --outDir dist-ssr",
+    "prerender": "node scripts/prerender.mjs",
+    "generate:sitemap": "node scripts/generate-sitemap.mjs",
+    "build:seo": "npm run generate:sitemap && vite build && npm run build:ssr && npm run prerender && node -e \"require('node:fs').rmSync('dist-ssr',{recursive:true,force:true})\"",
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
