--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,18 @@
 {
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [{ "type": "host", "value": "www.fcardentis.fr" }],
+      "destination": "https://fcardentis.fr/$1",
+      "permanent": true
+    },
+    {
+      "source": "/(.*)",
+      "has": [{ "type": "host", "value": "fc-ardentis.vercel.app" }],
+      "destination": "https://fcardentis.fr/$1",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/((?!api|.*\\..*).*)", "destination": "/" }
