refactor(ui): reduce visible keyword repetition while preserving SEO
- Keep all keywords in meta tags (title/description) and structured data
- Reduce repetitive mentions of '+18 ans', 'Colombes (92)', 'Hauts-de-Seine' in visible content
- Use natural variations: 'joueurs adultes', 'région parisienne', 'Île-de-France'
- Improve UX readability without impacting SEO performance

SEO keywords remain intact in:
- Page titles and meta descriptions
- Structured data (JSON-LD)
- Sitemap and robots.txt

--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,17 @@
   "redirects": [
     {
       "source": "/(.*)",
-      "has": [{ "type": "host", "value": "www.fcardentis.fr" }],
+      "has": [
+        { "type": "host", "value": "www.fcardentis.fr" }
+      ],
       "destination": "https://fcardentis.fr/$1",
       "permanent": true
     },
     {
       "source": "/(.*)",
-      "has": [{ "type": "host", "value": "fc-ardentis.vercel.app" }],
+      "has": [
+        { "type": "host", "value": "fc-ardentis.vercel.app" }
+      ],
       "destination": "https://fcardentis.fr/$1",
       "permanent": true
     }
