--- a/.editorconfig
+++ b/.editorconfig
@@ -1,34 +1,30 @@
-# EditorConfig - https://editorconfig.org
-# Helps maintain consistent coding styles across different editors
+# EditorConfig is awesome: https://EditorConfig.org
 
+# top-most EditorConfig file
 root = true
 
-# Default settings for all files
+# Unix-style newlines with a newline ending every file
 [*]
-charset = utf-8
 end_of_line = lf
-indent_style = space
-indent_size = 2
 insert_final_newline = true
+charset = utf-8
 trim_trailing_whitespace = true
 
-# TypeScript, JavaScript, JSON
-[*.{ts,tsx,js,jsx,json}]
+# Indentation override for all JS, JSX, TS, TSX, JSON, YAML, YML
+[*.{js,jsx,ts,tsx,json,yaml,yml}]
+indent_style = space
 indent_size = 2
 
-# Markdown - preserve trailing whitespace for line breaks
+# Indentation override for all Python files
+[*.py]
+indent_style = space
+indent_size = 4
+
+# Markdown files
 [*.md]
 trim_trailing_whitespace = false
 
-# YAML
-[*.{yml,yaml}]
-indent_size = 2
-
-# Shell scripts
-[*.sh]
-indent_size = 2
-
-# Makefiles require tabs
+# Makefile
 [Makefile]
 indent_style = tab
 
