--- a/.gitignore
+++ b/.gitignore
@@ -1,79 +1,57 @@
-# =============================================================================
-# FC Ardentis - .gitignore
-# =============================================================================
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# -----------------------------------------------------------------------------
-# Dependencies
-# -----------------------------------------------------------------------------
-node_modules/
+# IDEs
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
 
-# -----------------------------------------------------------------------------
-# Build outputs
-# -----------------------------------------------------------------------------
-dist/
-dist-ssr/
-*.tsbuildinfo
-.turbo/
-.cache/
-
-# -----------------------------------------------------------------------------
-# Environment variables
-# -----------------------------------------------------------------------------
-.env
-.env.*
-.env*.local
-!.env.example
-
-# -----------------------------------------------------------------------------
 # Logs
-# -----------------------------------------------------------------------------
-logs/
 *.log
+logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-# -----------------------------------------------------------------------------
-# Lock files (only keep package-lock.json for npm)
-# -----------------------------------------------------------------------------
-bun.lockb
-yarn.lock
-pnpm-lock.yaml
+# Dependencies
+node_modules/
+vendor/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+ENV/
+.venv
 
-# -----------------------------------------------------------------------------
-# IDE & Editor
-# -----------------------------------------------------------------------------
-.vscode/*
-!.vscode/extensions.json
-!.vscode/settings.json
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Build outputs
+dist/
+build/
+*.egg-info/
+*.so
+*.dylib
+*.dll
 
-# -----------------------------------------------------------------------------
-# OS files
-# -----------------------------------------------------------------------------
-.DS_Store
-Thumbs.db
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# -----------------------------------------------------------------------------
-# Vercel
-# -----------------------------------------------------------------------------
-.vercel/
+# Temporary files
+*.tmp
+*.temp
+.cache/
 
-# -----------------------------------------------------------------------------
-# Testing
-# -----------------------------------------------------------------------------
-coverage/
-.nyc_output/
-
-# -----------------------------------------------------------------------------
-# Misc
-# -----------------------------------------------------------------------------
-*.local
-*.pem
