feat: intégration YouTube (page Vidéos, live + replays automatiques)
- API route api/youtube.ts avec cache 5min/2min
- Page /videos (hero, section live, grille replays, Dialog)
- Lien Vidéos dans la nav, route SSR + lazy CSR
- SEO seoVideos(), sitemap /videos
- Env YOUTUBE_API_KEY, YOUTUBE_CHANNEL_ID
- CSP: frame-src YouTube pour les embeds

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,14 @@ SHEET_ORDERS_WEBAPP_URL=https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec
 # SHEET_APP_TOKEN=your_secret_token
 
 # -----------------------------------------------------------------------------
+# BACKEND - YouTube Data API v3 (server-side only)
+# -----------------------------------------------------------------------------
+# API key from Google Cloud Console (YouTube Data API v3 enabled)
+YOUTUBE_API_KEY=your_youtube_api_key
+# Channel ID of @fc_ardentis (format UCxxxxxxxxx)
+YOUTUBE_CHANNEL_ID=UCxxxxxxxxx
+
+# -----------------------------------------------------------------------------
 # OPTIONAL - Deployment
 # -----------------------------------------------------------------------------
 # Public base URL (auto-detected on Vercel, set for local testing)
