feat(checkout): livraison Point Relais Mondial Relay
- CartContext: types DeliveryMethod, RelayPoint, DeliveryInfo, action SET_DELIVERY
- useOrderTotal: sous-total, livraison 5,99€ si relay, total
- MondialRelayWidget: chargement jQuery/Leaflet/MR, callback OnParcelShopSelected
- DeliverySelector: choix hand/relay, affichage conditionnel widget
- Checkout/Details: récap avec livraison, validation delivery, payload API
- api/checkout: validation delivery, line_item Stripe livraison, payload Sheet
- Docs: Orders colonnes J-R, Apps Script doPost, README, business-logic
- .env.example: VITE_MONDIAL_RELAY_BRAND

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,14 @@ SHEET_ORDERS_WEBAPP_URL=https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec
 # SHEET_APP_TOKEN=your_secret_token
 
 # -----------------------------------------------------------------------------
+# MONDIAL RELAY - Widget Point Relais (front-end, VITE_ = exposed to client)
+# -----------------------------------------------------------------------------
+# Code client Mondial Relay (Brand) - utilisé par le widget
+# Utilisez "BDTEST  " (8 caractères avec espaces) pour les tests
+# Remplacez par votre code client réel en production
+VITE_MONDIAL_RELAY_BRAND=BDTEST
+
+# -----------------------------------------------------------------------------
 # BACKEND - YouTube Data API v3 (server-side only)
 # -----------------------------------------------------------------------------
 # API key from Google Cloud Console (YouTube Data API v3 enabled)
