--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.34.0",
     "libphonenumber-js": "^1.10.64",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
